<resources>
    <string name="app_name">Recipe Ninja</string>
    <string name="find_recipes">Find recipes</string>
    <string name="log_in">log in</string>
    <string name="log_out">log in</string>
    <string name="app_icon">app icon</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_password">Forgot password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_Google">Sign in with Google</string>
    <string name="or">or</string>
    <string name="logo">logo</string>
    <string name="save">SAVE</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="bookmarks">bookmarks</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="new_user_create_account">New User? Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="create_your_account">Create your Account</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="ingredients">INGREDIENTS</string>

</resources>
